--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Movies</title>
+    <title>CyberMovie</title>
 </head>
 <body>
     <header>
         <form id="form">
+            <h3 class="headerTitle">CyberMovie</h3>
             <input type="text" placeholder="Search" id="search" class="search">
         </form>
     </header>
 
     <main id="main">
         <div class="movie">
+            <div class="movieIMG">
             <img src= "https://images.unsplash.com/photo-1535332371349-a5d229f49cb5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80" alt="">
-            
+        </div>
             <div class="movie-info">
                 <h3>Movie Title</h3>
                 <span class="green">7.5</span>
