--- a/index.html
+++ b/index.html
@@ -15,48 +15,12 @@
         </form>
     </header>
 
-    <main id="main">
-        <div class="movie">
-            <div class="movieIMG">
-            <img src= "https://images.unsplash.com/photo-1535332371349-a5d229f49cb5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80" alt="">
-        </div>
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="green">7.5</span>
-            </div>
-
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptatum.
-            </div>
-        </div>
-
-        <div class="movie">
-            <img src= "https://images.unsplash.com/photo-1535332371349-a5d229f49cb5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80" alt="">
-            
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="green">7.5</span>
-            </div>
-
-            <div class="overview">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptatum.
-            </div>
-        </div>
-
-        <div class="movie">
-            <img src= "https://images.unsplash.com/photo-1535332371349-a5d229f49cb5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80" alt="">
-            
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="green">7.5</span>
-            </div>
-
-            <div class="overview">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, voluptatum.
-            </div>
-        </div>
-    </main>
+    <main id="main"></main>
+    <div class="pagination">
+        <div class="page disabled" id="prev">Prev</div>
+        <div class="current" id="current">1</div>
+        <div class="page" id="next">Next</div>
+    </div>
  
     <script src="script.js"></script>
 </body>
