--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main id="main"></main>
     <div class="pagination">
-        <div class="page disabled" id="prev">Prev</div>
+        <div class="page" id="prev">Prev</div>
         <div class="current" id="current">1</div>
         <div class="page" id="next">Next</div>
     </div>
