--- a/index.html
+++ b/index.html
@@ -10,12 +10,22 @@
 <body>
     <header>
         <form id="form">
-            <h3 class="headerTitle">CyberMovie</h3>
             <input type="text" placeholder="Search" id="search" class="search">
         </form>
+
+        <div class="text-box">
+            <h1 class="heading-primary">
+              <span class="heading-primary-main">CyberMovie</span>
+            </h1>
+        </div>
+        <p class="heading-sub">
+            <span class="heading-primary-sub">"Cinema is the most beautiful fraud in the world"</span>
+        </p>
+
     </header>
 
     <main id="main"></main>
+
     <div class="pagination">
         <div class="page" id="prev">Prev</div>
         <div class="current" id="current">1</div>
